Fix the alignment with the loading wheel and make the wheel bigger

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,11 +47,12 @@ body {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
+  margin: auto;
+  border: 25px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid darkgrey;
-  width: 120px;
-  height: 120px;
+  border-top: 25px solid darkgrey;
+  width: 200px;
+  height: 200px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
 }
